whitespace bug changes reverted

--- a/src/public/css/card-numbered/card-numbered.css
+++ b/src/public/css/card-numbered/card-numbered.css
@@ -65,6 +65,7 @@
 .card-numbered.card-numbered--md .card-numbered__text {
     max-width: 348px;
     letter-spacing: 0.1px;
+    white-space: pre-line;
 }
 
 @media (max-width: 576px) {
@@ -74,6 +75,7 @@
         font-size: 16px;
         line-height: 24px;
         letter-spacing: 0.1px;
+        white-space: pre-line;
     }
 }
 
