--- a/src/public/css/review/review.css
+++ b/src/public/css/review/review.css
@@ -134,6 +134,8 @@
     font-size: 16px;
     line-height: 24px;
     color: #111111;
+
+    white-space: pre-line;
 }
 
 @media (max-width: 576px) {
@@ -143,6 +145,8 @@
         font-size: 16px;
         line-height: 24px;
         color: #111111;
+
+        white-space: pre-line;
     }
 }
 
